# u-analytics

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: correlation.rs  distribution.rs  lib.rs  regression.rs  testing.rs  wasm.rs
src/capability/: indices.rs  mod.rs  nonnormal.rs  sigma_level.rs
src/detection/: cusum.rs  ewma.rs  mod.rs
src/smoothing/: holt.rs  holt_winters.rs  mod.rs  ses.rs
src/spc/: attributes.rs  chart.rs  mod.rs  rules.rs  variables.rs
src/weibull/: mle.rs  mod.rs  mrr.rs  reliability.rs
