[package]
name = "u-analytics"
version = "0.1.2"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
description = "Statistical process control, process capability, Weibull reliability, change-point detection, correlation, regression, distribution analysis, and hypothesis testing."
repository = "https://github.com/iyulab/u-analytics"
keywords = ["spc", "statistics", "quality", "weibull", "reliability"]
categories = ["science", "mathematics"]
readme = "README.md"

[dependencies]
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1.4"
